--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,11 @@
     text-transform: capitalize;
     font-family: "Poppins";
 }
+.container{
+    width: 80%;
+    margin: auto;
 
+}
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
@@ -90,3 +94,58 @@ nav.navbar .hero_links ul li a.hero_btn{
     display: block;
     margin-right: 70px;
  }
+
+
+ /* how we work section */
+ .how_sec {
+    background: gry;
+    padding-top: 128px;
+    padding-bottom: 128px;
+ }
+ .how_sec .container{
+    display: flex;
+    justify-content: space-between;
+    
+ }
+ .how_sec .container .heading{
+    width: 30%;
+
+ }
+ .how_sec .container .heading h2{
+    padding: 16px 0;
+    font-size: 40px;
+ }
+ .how_sec .container .heading p{
+    color: gray;
+    font-size: 20px;
+    padding: 16px 0;
+ }
+ .how_sec .container .heading a{
+    text-decoration: none;
+    font-size: 18px;
+    padding: 16px 0;
+    color: royalblue;
+    /* margin-top: 50px; */
+ }
+ .how_sec .container .heading a.arrow {
+    color: royalblue;
+    margin-left: 10px;
+    /* display: ; */
+ }
+ .how_sec .container .cards{
+    width: 60%;
+ }
+ .how_sec .container .cards .card_1,
+ .how_sec .container .cards .card_2{
+    /* width: 50%; */
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+ }
+ .how_sec .container .cards .card_1 .card img,
+ .how_sec .container .cards .card_1 .card h2,
+ .how_sec .container .cards .card_1 .card p
+ {
+    margin-bottom: 16px;
+ }
+ 
