--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@
 
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
 
 
 /* hero section */
@@ -324,6 +324,89 @@ margin-top: 24px;
 .FAQ-sec .container .row .head a {
    font-size: 15px;
 }
-.FAQ-sec .container .row .question{
+.FAQ-sec .container .row .question div{
+   border-bottom: 1px solid rgb(218, 214, 214);
+}
+.FAQ-sec .container .row .question .q1-expand{  
+   display: flex;
+   justify-content: space-between;
+   align-items:flex-start;
    
 }
+.FAQ-sec .container .row .question .q1-expand span{
+   font-size: 20px;
+   color: blue;
+   margin-right: 59px;
+}
+.FAQ-sec .container .row .question .q1-expand .q1{
+   margin-bottom: 25px;
+   border: 0;
+}
+.FAQ-sec .container .row .question .q1-expand .q1 h3{
+   font-size: 18px;
+   margin-bottom: 10px;
+}
+.FAQ-sec .container .row .question .q1-expand .q1 p{
+   margin-bottom: 20px;
+   color: #282938;
+   width: 80%;
+   line-height: 30px;
+}
+.FAQ-sec .container .row .question .q1-expand svg{
+   color: gray;
+}
+.FAQ-sec .container .row .question .q2,
+.FAQ-sec .container .row .question .q3,
+.FAQ-sec .container .row .question .q4,
+.FAQ-sec .container .row .question .q5
+{
+   padding: 25px 0;
+   display: flex;
+   justify-content: space-between;
+}
+.FAQ-sec .container .row .question .q2 span,
+.FAQ-sec .container .row .question .q3 span,
+.FAQ-sec .container .row .question .q4 span,
+.FAQ-sec .container .row .question .q5 span{
+   font-size: 20px;
+   color: blue;
+   margin-right: -200px;
+
+}
+.FAQ-sec .container .row .question .q2 h3,
+.FAQ-sec .container .row .question .q3 h3,
+.FAQ-sec .container .row .question .q4 h3,
+.FAQ-sec .container .row .question .q5 h3{
+   font-size: 18px;
+   width: 50%;
+}
+.FAQ-sec .container .row .question .q2 svg,
+.FAQ-sec .container .row .question .q3 svg,
+.FAQ-sec .container .row .question .q4 svg,
+.FAQ-sec .container .row .question .q5 svg{
+   color: gray;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
