--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@
     font-family: "Poppins,sans-serif";
     text-decoration: none;
     list-style: none;
+    font-weight: 100;
+}
+body{
+   font-family: "Poppins,sans-serif";
+   font-weight: 100;
 }
 
 .container{
@@ -14,7 +19,7 @@
 
 }
 
-/* @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 /* hero section */
@@ -242,7 +247,6 @@ margin-top: 24px;
 }
 .Features_sec .container .cards .card1 div p ,
 .Features_sec .container .cards .card2 div p {
-   /* justify-content: left; */
    text-align: left !important;
    font-size: 18px;
    color: rgb(7, 7, 60);
@@ -386,6 +390,309 @@ margin-top: 24px;
 .FAQ-sec .container .row .question .q5 svg{
    color: gray;
 }
+/* contact section======================================================== */
+.contact-sec .container .row{
+   display: flex;
+   padding: 120px 0;
+   
+}
+.contact-sec .container .row .head{
+   position: relative;
+   background-image: url("../images/woman-writing-on-paper-3228878.png");
+   background-position: center;
+   background-size:auto;   
+   background-repeat: no-repeat;
+   width: 700px;
+   height: 650px;
+}
+.contact-sec .container .row .head .clear{
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background: #000;
+   opacity: 0.5;
+   z-index: 1;
+}
+/* .contact-sec .container .row .head img{
+width: 100%;
+} */
+.contact-sec .container .row .head .content{ 
+   padding:  120px ;
+   color: white;
+   z-index: 5;
+   position: absolute;
+}
+.contact-sec .container .row .head .content h2{
+   font-size: 35px;
+   padding-bottom: 30px;
+}
+
+.contact-sec .container .row .head .content p {
+   font-size: 18px;
+}
+.contact-sec .container .row .form-sec{
+   padding: 120px ;
+   background-color: #1C1E53;
+   width: 50%;
+   color: #F4F6FC;
+}
+.contact-sec .container .row .form-sec h2{
+   font-size: 35px;
+   /* color: white; */
+   padding-bottom: 15px;
+}
+.contact-sec .container .row .form-sec p{
+   font-size: 10px;
+   /* width: 103%; */
+   padding-bottom: 15px;
+   line-height: 30px;
+}
+.contact-sec .container .row .form-sec form input{
+   padding: 15px;
+   color: white;
+   padding-right: 60px;
+   margin-bottom: 15px;
+   border-radius: 10px;
+   background-color: #1C1E53;
+   border: 1px solid rgb(210, 210, 210 ,0.19);
+}
+.contact-sec .container .row .form-sec form button{
+   padding: 15px 80px;
+   background: #FCD980;
+   font-size: 11px;
+   border-radius: 50px;
+   border: 0;
+   margin-bottom: 15px;
+}
+
+.contact-sec .container .row .form-sec span {
+   display: block;
+   margin: 0 40px;
+   /* width: 100%;   */
+
+}
+/* blog-section======================================================================= */
+.blog-sec .container h2{
+   font-size: 35px;
+   margin-bottom:64px ;
+   font-weight: bold;
+}
+.blog-sec .container .row{
+   margin-bottom: 64px;
+   display: flex;
+   /* justify-content: space-between; */
+
+}
+.blog-sec .container .row .col.m-5{
+   margin: 0 64px;
+}
+.blog-sec .container .col {
+   width: 30%;
+}
+.blog-sec .container .col img{
+   width: 100%;
+   margin-bottom: 40px;
+}
+.blog-sec .container .col span{
+   font-size: 15px;
+   color: #7a7b7e;
+   margin-bottom: 16px;
+   display: block;
+}
+.blog-sec .container .col h3{
+   font-size: 24px;
+   color: #1C1E53;
+   margin-bottom: 16px;
+   font-weight:100;
+}
+
+.blog-sec .container .col p{
+   font-size: 16px;
+   color: #666768;
+   margin-bottom: 32px;
+}
+.blog-sec .container .col a{
+   color: #000;
+}
+.blog-sec .container .col a {
+   margin-right: 10px;
+}
+/* footer section================================================= */
+footer{
+   background: #1C1E53;
+
+}
+
+footer .container .row .row1{
+   display: flex;
+   justify-content: space-between;
+
+}
+
+footer .container .row .row1 .col1{
+   padding: 96px 160px;
+   padding-bottom: 0;
+   width: 40%;
+}
+footer .container .row .row1 .col1 img{
+   margin-bottom: 23px;
+   width: auto;
+
+}
+footer .container .row .row1 .col1 p{
+   font-size: 18px;
+   color: #F4F6FC;
+   width: 400px;
+   margin-bottom: 70px;
+}
+footer .container .row .row1 .col1 .email{
+   background: #FCD980;
+   padding: 17px 30px;
+   width: 400px;
+   margin-bottom: 0;
+}
+footer .container .row .row1 .col1 .email .me{
+   margin-right: 100px;
+   font-weight: 900;
+}
+footer .container .row .row1 .col1 .email .us{
+   font-weight: 900;
+   /* margin-bottom: 1px; */
+   margin-left: 20px;
+}
+footer .container .row .row1 .col1 .email h4{
+   color: #7a7b7e;
+   margin-right: 95px;
+   font-size: 12px;
+   display: inline-block;
+
+}
+footer .container .row .row1 .col1 .email .num{
+   font-size: 12px;
+   color: #7a7b7e;
+}
+
+footer .container .row .row1 .col2{
+   padding: 85px 100px ;
+   color: #F4F6FC;
+   width: 60%;
+} 
+footer .container .row .row1 .col2 h2{
+   margin-bottom: 35px;
+   font-size: 40px;
+   font-weight: 900;
+}
+footer .container .row .row1 .col2 p {
+   color: #BBBBCB;
+   font-size: 18px;
+   font-weight: 100;
+   margin-bottom: 35px;
+}
+footer .container .row .row1 .col2 a{
+   color: white;
+   margin-right: 26px;
+}
+footer .container .row .row2{
+   display: flex;
+   justify-content: space-between;
+   padding: 32px 160px;
+   background:#F4F6FC;
+   width: 100%;
+   position: absolute;
+}
+footer .container .row .row2 .col1 {
+   width: 50%;
+}
+footer .container .row .row2 .col1 h3{
+   font-size: 16px;
+}
+footer .container .row .row2 .col2{
+   width: 50%;
+}
+footer .container .row .row2 .col2 ul li{
+   display: inline-block;
+   padding: 0 10px;
+   font-size: 400;
+}
+footer .container .row .row2 .col2 ul li a{
+   color: #000;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
