about us page start

--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
     box-sizing: border-box;
     text-transform: capitalize;
-    font-family: "Poppins,sans-serif";
+    font-family:sans-serif;
     text-decoration: none;
     list-style: none;
     font-weight: 100;
@@ -36,6 +36,7 @@ nav.navbar{
     align-items: center;
     padding: 25px 0;
     margin-bottom: 145px;
+    background:#1C1E53;
 }
 nav.navbar h2{
     color: aliceblue;
@@ -581,7 +582,7 @@ footer .container .row .row2{
    justify-content: space-between;
    padding: 32px 160px;
    background:#F4F6FC;
-   width: 100%;
+   width: 80%;
    position: absolute;
 }
 footer .container .row .row2 .col1 {
